--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,21 @@ body{
     margin: 0;
     padding: 0;
 }
+input{
+    border: none;
+    background-color: rgba(128, 128, 128, 0.226);
+    
+    padding-left: 50px;
+}
+.calc-img{
+    border-radius: 50px;
+}
+.calc-area{
+    background-color: #F8F8F8;  /* rgba(128, 128, 128, 0.109); */
+    border-radius: 15px;
+    padding: 30px;
+   
+}
+.calculate-btn{
+    margin-left: 100px;
+}
